[package]
name = "trading-strategy"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"
trading-chart = { path = "../trading-chart" }
anyhow = "1.0.100"

[lib]
name = "trading_strategy"
path = "src/lib.rs" 

[dev-dependencies]
tempfile = "3.23.0"
