[package]
name = "trading-strategy"
version = "0.4.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"
trading-chart = "0.3.0"
thiserror = "2.0.12"

[patch.crates-io]
trading-chart = { path = "../trading-chart" }

[lib]
name = "trading_strategy"
path = "src/lib.rs" 

[dev-dependencies]
tempfile = "3.24.0"
