[package]
name = "trading-strategy"
version = "0.10.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
trading-chart = "0.3.2"
thiserror = "2.0.18"

[patch.crates-io]
trading-chart = { path = "../trading-chart" }

[lib]
name = "trading_strategy"
path = "src/lib.rs" 

[dev-dependencies]
tempfile = "3.27.0"
